--- a/docs/LeetCode热题100/二叉树.md
+++ b/docs/LeetCode热题100/二叉树.md
@@ -163,11 +163,7 @@
 108\. 将有序数组转换为二叉搜索树
 -------------------
 
-给你一个整数数组 `nums` ，其中元素已经按 **升序** 排列，请你将其转换为一棵
-
-平衡
-
-二叉搜索树。
+给你一个整数数组 `nums` ，其中元素已经按 **升序** 排列，请你将其转换为一棵平衡二叉搜索树。
 
 **示例 1：**
 
@@ -199,11 +195,8 @@
 
 **有效** 二叉搜索树定义如下：
 
-*   节点的左
+*   节点的左子树只包含 **小于** 当前节点的数。
     
-    子树
-    
-    只包含 **小于** 当前节点的数。
 *   节点的右子树只包含 **大于** 当前节点的数。
 *   所有左子树和右子树自身必须也是二叉搜索树。
 
