--- a/docs/LeetCode热题100/子串.md
+++ b/docs/LeetCode热题100/子串.md
@@ -17,9 +17,9 @@
 
 **提示：**
 
-*   `1 <= nums.length <= 2 * 104`
+*   `1 <= nums.length <= 2 * 10^4`
 *   `-1000 <= nums[i] <= 1000`
-*   `-107 <= k <= 107`
+*   `-10^7 <= k <= 10^7`
 
 239\. 滑动窗口最大值
 -------------
@@ -50,8 +50,8 @@
 
 **提示：**
 
-*   `1 <= nums.length <= 105`
-*   `-104 <= nums[i] <= 104`
+*   `1 <= nums.length <= 10^5`
+*   `-10^4 <= nums[i] <= 10^4`
 *   `1 <= k <= nums.length`
 
 76\. 最小覆盖子串
@@ -87,7 +87,7 @@
 
 *   `m == s.length`
 *   `n == t.length`
-*   `1 <= m, n <= 105`
+*   `1 <= m, n <= 10^5`
 *   `s` 和 `t` 由英文字母组成
 
 **进阶：**你能设计一个在 `o(m+n)` 时间内解决此问题的算法吗？
